<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/coordinatorLayout"
    tools:context=".activities.SymptomsCheckActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            app:cardElevation="8dp"
            app:cardCornerRadius="3dp"
            android:layout_marginBottom="8dp"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:background="@color/grey_50"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="2"
                        android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle"
                        android:text="@string/select_a_minimum_of_5_symptoms"
                        android:layout_height="wrap_content" />
                    <Button
                        android:id="@+id/submitSymptoms"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:text="@string/submit"
                        android:layout_height="wrap_content" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="2"
                        android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle"
                        android:text="@string/can_t_find_you_symptom_press_the_button_for_more_information"
                        android:layout_height="50dp" />
                    <Button
                        android:id="@+id/noSymptomsFound"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:text="@string/submit"
                        android:layout_height="wrap_content" />

                </LinearLayout>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewSimptom"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />
    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>
