<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".activities.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/pharmacyCardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:cardCornerRadius="4dp"
            app:cardElevation="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/pharmacyImg"
                    android:layout_width="wrap_content"
                    android:layout_height="300dp"
                    android:contentDescription="@string/pharmacy_pic"
                    android:scaleType="centerInside"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0"
                    app:srcCompat="@drawable/pharmacy" />

                <view
                    android:id="@+id/view4"
                    class="androidx.constraintlayout.widget.ConstraintLayout"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:alpha="0.5"
                    android:layout_marginTop="8dp"
                    android:background="@color/card_bg_grey"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.0" />

                <TextView
                    android:id="@+id/pharmacyTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:textStyle="bold"
                    android:fontFamily="@font/roboto"
                    android:textColor="@color/black"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    app:layout_constraintBottom_toBottomOf="@+id/pharmacyImg"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.06"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/view4"
                    app:layout_constraintTop_toTopOf="@+id/view4"
                    app:layout_constraintVertical_bias="0.029"
                    android:text="@string/view_a_list_of_pharmacies_in_your_area" />



            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/symptomsCardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:cardCornerRadius="4dp"
            app:cardElevation="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/symptomsImg"
                    android:layout_width="wrap_content"
                    android:layout_height="300dp"
                    android:contentDescription="@string/pharmacy_pic"
                    android:scaleType="centerInside"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0"
                    app:srcCompat="@drawable/symptoms" />

                <view
                    android:id="@+id/view2"
                    class="androidx.constraintlayout.widget.ConstraintLayout"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="8dp"
                    android:alpha="0.5"
                    android:background="@color/card_bg_grey"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.0" />

                <TextView
                    android:id="@+id/symptomsTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:textStyle="bold"
                    android:fontFamily="@font/roboto"
                    android:textColor="@color/black"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    app:layout_constraintBottom_toBottomOf="@+id/symptomsImg"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.06"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/view2"
                    app:layout_constraintTop_toTopOf="@+id/view2"
                    app:layout_constraintVertical_bias="0.029"
                    android:text="@string/not_feeling_well_check_your_symptoms_here" />



            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/chatCardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            app:cardCornerRadius="4dp"
            app:cardElevation="8dp"
            android:layout_marginEnd="16dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/chatImg"
                    android:layout_width="wrap_content"
                    android:layout_height="300dp"
                    android:contentDescription="@string/pharmacy_pic"
                    android:scaleType="centerInside"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0"
                    app:srcCompat="@drawable/chat" />

                <view
                    android:id="@+id/view1"
                    class="androidx.constraintlayout.widget.ConstraintLayout"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="8dp"
                    android:alpha="0.5"
                    android:background="@color/card_bg_grey"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.0" />

                <TextView
                    android:id="@+id/chatTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:textStyle="bold"
                    android:fontFamily="@font/roboto"
                    android:textColor="@color/black"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    app:layout_constraintBottom_toBottomOf="@+id/chatImg"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.06"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/view1"
                    app:layout_constraintTop_toTopOf="@+id/view1"
                    app:layout_constraintVertical_bias="0.029"
                    android:text="@string/chat_to_a_consultant" />



            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>
